components/coder/configs/home/ingress-coder.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Coder"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "coder.png"
    gethomepage.dev/href: "https://coder.tail0c49c.ts.net"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - coder
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
